<resources>
    <string name="app_name">Body Mass Monitor</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Nincs fiókod? Regisztráció</string>
    <string name="register">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="back_to_login">Vissza</string>
    <string name="logout">Kijelentkezés</string>
    <string name="upload_measurment">Mérés feltöltése</string>
    <string name="back">Vissza</string>
    <string name="chart">Chart</string>

    <string name="fmt_date">Dátum: %1$s</string>
    <string name="fmt_weight">Súly: %.1f kg</string>
    <string name="fmt_bmi">BMI: %.1f</string>
    <string name="fmt_fat">Zsír: %.1f %%</string>
    <string name="fmt_muscle">Izom: %.1f %%</string>
    <string name="fmt_other">Egyéb: %.1f %%</string>
    <string name="cd_add">Hozzáadás</string>
    <string name="cd_stats">Statisztika</string>
    <string name="chart_title">Testtömeg felbontás</string>
    <string name="import_in_progress">Fájl betöltése folyamatban...</string>
    <string name="import_success">%1$d rekord sikeresen importálva.</string>
    <string name="import_failed">Hiba történt: %1$s</string>
    <string name="import_duplicates_title">Duplikált dátum</string>
    <string name="import_duplicates_msg">%1$d rekord már létezik. Lecseréled ezeket?</string>
    <string name="btn_replace">Csere</string>
    <string name="area_fat">Zsír (kg)</string>
    <string name="area_muscle">Izom (kg)</string>
    <string name="area_other">Egyéb (kg)</string>
    <string name="chart_subtitle_fmt">Zsír: %.1f kg (%.0f%%)   Izom: %.1f kg (%.0f%%)</string>
    <string name="chart_composition_fmt">Zsír: %.1f kg (%.0f%%)   Izom: %.1f kg (%.0f%%)</string>
    <string name="btn_delete">Törlés</string>

    <string name="delete_confirmation_title">Mérés törlése</string>
    <string name="delete_confirmation_msg">Biztosan törlöd a kiválasztott mérést?</string>

    <string name="toast_deleted">Mérés törölve</string>
    <string name="toast_delete_failed">Törlés sikertelen: %1$s</string>
    <!-- %1$d rekord létezik … -->
    <string name="duplicate_title">Már van ezen a napon mérés</string>
    <string name="duplicate_msg">Felülírod a meglévő mérés(eke)t?</string>
    <string name="fmt_fat_pct">Zsír: %.1f%%</string>
    <string name="fmt_muscle_pct">Izom: %.1f%%</string>
    <string name="fmt_other_kg">Egyéb: %.1f kg</string>



</resources>